--- a/style.css
+++ b/style.css
@@ -1,22 +1,84 @@
-body {
-  margin: 0;
+header {
+  width: 100%;
   padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+}
+
+header .logo {
+  position: absolute;
+  top: 0%;
+  margin: 30px 0 0 30px;
+  width: 150px;
+  background-attachment: fixed;
+}
+
+header .logo img {
+  width: 100%;
+}
+
+header .text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 0;
+  margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-header {
-  background-color: aquamarine;
-  width: 100%;
-  height: 100vh;
+header .text h1 {
+  font-size: 90px;
+  font-family: 'Anton', sans-serif;
   padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header .text h2 {
+  font-size: 72px;
+  font-family: 'Pathway Gothic One', sans-serif;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header .nav {
+  color: white;
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 24px;
+  width: 350px;
+  position: fixed;
+  top: 0%;
+  right: 0%;
+  z-index: 100;
+}
+
+header .nav ul {
+  margin: 40px 30px 0 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.nav.scrolled {
+  background-color: black;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
 }
 
 .container-card {
   margin-top: 60px;
   width: 100%;
-  border: 2px red solid;
 }
 
 .container-card ul {
@@ -27,22 +89,89 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container-card li {
-  width: 30%;
-  margin: 0 auto;
-  height: 400px;
-  border: 2px solid black;
+  margin: 0 35px;
+  width: 594px;
+  height: 747px;
   background-color: lightgrey;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.container-card li:hover .overlay {
+  opacity: 1;
+}
+
+.container-card li:hover {
+  opacity: 0.8;
+  background-color: grey;
+}
+
+.container-card .overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 60px;
+  font-family: "Pathway Gothic One", sans-serif;
+  opacity: 0;
 }
 
 .container-card #little {
-  height: 300px;
+  height: 500px;
 }
 
-.container-card #big {
-  padding-top: 100px;
+footer {
+  width: 100%;
+  height: 100vh;
+  background-color: #fad9d6;
+  position: relative;
+}
+
+footer .logo {
+  position: absolute;
+  top: 0%;
+  margin: 50px 0 0 50px;
+  width: 150px;
+  background-attachment: fixed;
+}
+
+footer .logo img {
+  width: 100%;
+}
+
+footer ul {
+  margin-left: 400px;
+  padding-top: 250px;
+  width: 400px;
+  list-style-type: none;
+}
+
+footer ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 25px;
+}
+
+footer ul img {
+  width: 50%;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=style.css.map */
