--- a/style.scss
+++ b/style.scss
@@ -1,38 +1,20 @@
-body {
-  margin: 0;
+@mixin NoMarge {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
-header {
-  background-color: aquamarine;
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+
+@mixin center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.container-card {
-  margin-top: 60px;
-  width: 100%;
-  border: 2px red solid;
+@import "./header";
+@import "./cards";
+@import "./footer";
 
-  ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: center;
-  }
-  li {
-    width: 30%;
-    margin: 0 auto;
-    height: 400px;
-    border: 2px solid black;
-    background-color: lightgrey;
-    margin-bottom: 30px;
-  }
-  #little {
-    height: 300px;
-  }
-  #big {
-    padding-top: 100px;
-  }
+body {
+  @include NoMarge();
 }
+
